# fotogram

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.front  README.md  docker-compose.yaml  frontend.conf  index.html  pyproject.toml  requirements.txt
.github/: ci.yaml
.github/workflows/: ci.yaml
front/: auth.html  index.html  signup.html  style.css  user.html
src/: app.py  create_tables.py  database.py  settings.py
src/files/: models.py  routing.py  services.py
src/posts/: models.py  routing.py  schemas.py  services.py
src/users/: __init__.py  models.py  routing.py  schemas.py  services.py
